--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python>=3.6             # PSF
-  - pip>=20.3.1             # MIT
+  - python==3.6             # PSF
+  #- pip>=20.3.1             # MIT
   - pip:
     - isort==5.8.0          # MIT
     - autoflake==1.4        # MIT
