Added automated tests by reading and running the games from file

--- a/environment.yml
+++ b/environment.yml
@@ -10,3 +10,4 @@ dependencies:
     - isort                 # MIT
     - autoflake             # MIT
     - black                 # MIT
+    - pytest                # MIT
