--- a/environment.yml
+++ b/environment.yml
@@ -4,10 +4,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python==3.6             # PSF
-  - pip
+  - python==3.9             # PSF
+  - pip==21.1.2             # MIT
   - pip:
-    - isort                 # MIT
-    - autoflake             # MIT
-    - black                 # MIT
-    - pytest                # MIT
+    - isort==5.8.0          # MIT
+    - autoflake==1.4        # MIT
+    - black==21.5b2         # MIT
+    - pytest==6.2.4         # MIT
