Reorganised and renamed file structure. Also renamed the sample files by their game codes rather than integers. Added some missing typing

--- a/development/makefile
+++ b/development/makefile
@@ -5,4 +5,4 @@ SHELL := /bin/bash
 git-hooks:
 	chmod +x githooks/*
 	mkdir -p .git/hooks
-	cd .git/hooks && ln -sf ../../githooks/* .
+	cd ../.git/hooks && ln -sf ../../githooks/* .
